--- a/pages/_app.css
+++ b/pages/_app.css
@@ -1,3 +1,8 @@
+.mapicon-parent {
+    border: 0px;
+    background-color: transparent;
+}
+
 .mapicon {
     display: block;
     box-sizing: border-box;
@@ -11,6 +16,7 @@
     overflow: hidden;
     color: white;
     background-color: black;
+    transform-origin: center center;
 }
 
 .mapicon-bus {
