Update to latest docs schema plus load pages from YAML when in development mode.

--- a/pages/_app.css
+++ b/pages/_app.css
@@ -67,6 +67,11 @@
     background-color: #0FF;
 }
 
+.mapicon-information {
+    color: #FFF;
+    background-color: #F0F;
+}
+
 .mapicon-altitude {
     background-color: #000;
     border: 0px;
@@ -78,4 +83,8 @@
     background-repeat:no-repeat;
     background-position:center center;
     background-size: 100% 100%, auto;
+}
+
+.map-popup-link-icons {
+    font-size: 1.5em;
 }
