Minor app updates required to sync with document schema changes.

--- a/pages/_app.css
+++ b/pages/_app.css
@@ -46,6 +46,11 @@ a {
     background-color: #F00;
 }
 
+.mapicon-viewpoint, .mapicon-moutain_peak, .mapicon-waterfall, .mapicon-water_crossing {
+    color: #FFF;
+    background-color: #0A0;
+}
+
 .mapicon-parking {
     color: #FFF;
     background-color: #00F;
